--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
+    "jest-junit": "^16.0.0",
     "jsdom": "^27.0.0",
     "postcss": "^8.5.5",
     "sass-embedded": "^1.89.2",
